--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -7,17 +7,20 @@
     "start": "node dist/index.js",
     "dev": "npm run build && npm run start"
   },
-  "dependencies": {
-    "@repo/typescript-config": "workspace:*",
-    "@types/express": "^5.0.3",
+  "dependencies": { 
+    "@types/jsonwebtoken": "^9.0.10",
     "express": "^5.1.0",
     "zod": "^3.25.67"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.10"
+       "@repo/typescript-config": "workspace:*",
+       "@types/express": "^5.0.3",
+       "@repo/backend-common" : "workspace:*",
+       "@repo/common" : "workspace:*"
   }
 }
