--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/ws": "^8.18.1",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.2"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10"
+  }
 }
