--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -10,7 +10,8 @@
   "dependencies": { 
     "@types/jsonwebtoken": "^9.0.10",
     "express": "^5.1.0",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+      "@repo/db":"workspace:*"
   },
   
   "keywords": [],
