--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -7,21 +7,21 @@
     "start": "node dist/index.js",
     "dev": "npm run build && npm run start"
   },
-  "dependencies": { 
+  "dependencies": {
     "@types/jsonwebtoken": "^9.0.10",
+    "jsonwebtoken": "^9.0.2",  
     "express": "^5.1.0",
     "zod": "^3.25.67",
-      "@repo/db":"workspace:*"
+    "@repo/db": "workspace:*"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-       "@repo/typescript-config": "workspace:*",
-       "@types/express": "^5.0.3",
-       "@repo/backend-common" : "workspace:*",
-       "@repo/common" : "workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "@types/express": "^5.0.3",
+    "@repo/backend-common": "workspace:*",
+    "@repo/common": "workspace:*"
   }
 }
