--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "exports": {
-    "./config": "./src/index.ts"
+    "./config": "./dist/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+          "build": "tsc -b"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*"
