--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "exports" :{
-     "./client":"./src/index.ts"
+     "./client":"./dist/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "build": "tsc -b"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
