--- a/apps/excelidraw-frontend/package.json
+++ b/apps/excelidraw-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "axios": "^1.10.0",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "react": "^19.0.0",
