--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "draw-app",
   "private": true,
+  "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=18"
+  },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -9,12 +17,9 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.11.6",
     "prettier": "^3.5.3",
     "turbo": "^2.5.4",
     "typescript": "5.8.2"
-  },
-  "packageManager": "pnpm@9.0.0",
-  "engines": {
-    "node": ">=18"
   }
 }
