--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,6 @@
 [build]
-  command = "npm run build"
-  publish = "."   # ✅ Use "." for SSR or dynamic sites, OR leave it blank.
-
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-
+  base = "" # repo root
+  publish = "apps/excelidraw-frontend/.next"
+  command = "npx turbo run build --filter=excelidraw-frontend"
 [build.environment]
   NODE_VERSION = "18"
-  NPM_VERSION = "8"
