--- a/apps/excelidraw-frontend/package.json
+++ b/apps/excelidraw-frontend/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@tabler/icons-react": "^3.34.1",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
+    "cobe": "^0.6.4",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.522.0",
     "next": "14.2.15",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
